--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 	<link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-	<h1 class="title">Shaddo One Personal Website</h1>
+	<div>
+		<h1 class="title">Shaddo One Personal Website</h1>
+	</div>
 </body>
 </html>
