added bootstrap js for formatting and css

--- a/index.html
+++ b/index.html
@@ -6,10 +6,17 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Shaddo One Website</title>
 	<link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 </head>
 <body>
-	<div>
-		<h1 class="title">Shaddo One Personal Website</h1>
+	<div class="container">
+		<h1>Connor Sullivan Personal Website</h1>
+		<p>This is my personal website.</p>
 	</div>
+
+	<!-- jQuery Library -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<!-- Latest Compiled JavaScript -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </body>
 </html>
