--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<div class="container">
-		<h1>Connor Sullivan Personal Website</h1>
+		<h1>Chloe Sullivan Personal Website</h1>
 		<p>This is my personal website.</p>
 	</div>
 	
